Closed
Bug 863728
Opened 13 years ago
Closed 12 years ago
Implement the replacement encoding
Categories
(Core :: Internationalization, defect)
Core
Internationalization
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: hsivonen, Assigned: hsivonen)
References
(Blocks 1 open bug)
Details
Attachments
(2 files, 3 obsolete files)
|
113.60 KB,
patch
|
Details | Diff | Splinter Review | |
|
153.06 KB,
patch
|
emk
:
review+
|
Details | Diff | Splinter Review |
Implement a decoder for http://encoding.spec.whatwg.org/#replacement
| Assignee | ||
Updated•12 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•12 years ago
|
||
| Assignee | ||
Comment 2•12 years ago
|
||
| Assignee | ||
Comment 3•12 years ago
|
||
| Assignee | ||
Comment 4•12 years ago
|
||
| Assignee | ||
Comment 5•12 years ago
|
||
Attachment #827363 -
Attachment is obsolete: true
| Assignee | ||
Comment 6•12 years ago
|
||
| Assignee | ||
Comment 7•12 years ago
|
||
| Assignee | ||
Comment 8•12 years ago
|
||
Attachment #827361 -
Attachment is obsolete: true
Attachment #827362 -
Attachment is obsolete: true
| Assignee | ||
Comment 9•12 years ago
|
||
Comment on attachment 832142 [details] [diff] [review]
The whole thing as one patch
Some notes:
* The changes from GetUnicodeDecoder to GetUnicodeDecoderRaw are there to avoid trips through the old alias table.
* The bulk of the nsHtml5StreamParser changes are about deferring the commitment to a user-overridden encoding so that the replacement encoding can take precedence over the menu. Otherwise, socially engineered XSS would still work.
* The replacement encoding doesn't inherit into iframes if you use script to inject an iframe into a replacement encoding document. This is mainly to keep the concept "doesn't inherit" and "ignores the menu" the same.
Attachment #832142 -
Flags: review?(VYV03354)
| Assignee | ||
Comment 10•12 years ago
|
||
Oh, and there's no actual dependency on bug 936439, because asserting stuff isn't really feasible before bug 805374 lands.
No longer depends on: 936439
Comment 11•12 years ago
|
||
Comment on attachment 832142 [details] [diff] [review]
The whole thing as one patch
Review of attachment 832142 [details] [diff] [review]:
-----------------------------------------------------------------
Probably you will have to update moz2javaCharset in dom/plugins/base/nsPluginInstanceOwner.cpp.
::: dom/encoding/test/test_TextDecoder.js
@@ +352,4 @@
> {encoding: "utf-16le", labels: ["utf-16", "utf-16le"]},
> {encoding: "utf-16be", labels: ["utf-16be"]},
> {encoding: "x-user-defined", labels: ["x-user-defined"]},
> + {error: "TypeError", labels: ["x-windows-949", "\u0130SO-8859-1", "csiso2022kr", "iso-2022-kr", "iso-2022-cn-ext", "iso-2022-cn-ext", "replacement"]},
Why "iso-2022-cn-ext" is included twice? (One should be "iso-2022-cn".)
Attachment #832142 -
Flags: review?(VYV03354) → review+
| Assignee | ||
Comment 12•12 years ago
|
||
(In reply to Masatoshi Kimura [:emk] from comment #11)
> Probably you will have to update moz2javaCharset in
> dom/plugins/base/nsPluginInstanceOwner.cpp.
Or delete the code, more likely: bug 942706.
> ::: dom/encoding/test/test_TextDecoder.js
> @@ +352,4 @@
> > {encoding: "utf-16le", labels: ["utf-16", "utf-16le"]},
> > {encoding: "utf-16be", labels: ["utf-16be"]},
> > {encoding: "x-user-defined", labels: ["x-user-defined"]},
> > + {error: "TypeError", labels: ["x-windows-949", "\u0130SO-8859-1", "csiso2022kr", "iso-2022-kr", "iso-2022-cn-ext", "iso-2022-cn-ext", "replacement"]},
>
> Why "iso-2022-cn-ext" is included twice? (One should be "iso-2022-cn".)
Oops. Landed with that fixed:
https://hg.mozilla.org/integration/mozilla-inbound/rev/3336625f130b
Thank you.
Comment 13•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in
before you can comment on or make changes to this bug.
Description
•