Bug 863728 - Implement the replacement encoding. r=emk.